further progress on legendary condition refactoring